# ml-homework-1

./: README.md  app.py  experiments.ipynb  models.py  pipeline.pickle  pyproject.toml
profiling_reports/: train_profile.html
