[tool.poetry]
name = "ml-homework-1"
version = "0.1.0"
description = ""
authors = ["Nikolay Nyunin <nikolay.nyunin@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_homework_1"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
