[tool.poetry]
name = "ml-homework-1"
version = "0.1.0"
description = ""
authors = ["Nikolay Nyunin <nikolay.nyunin@gmail.com>"]
readme = "README.md"
packages = [{include = "ml_homework_1"}]

[tool.poetry.dependencies]
python = "~3.12"
jupyter = "^1.1.1"
pandas = "^2.2.3"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
ydata-profiling = "^4.12.0"
phik = "^0.12.4"
scikit-learn = "^1.5.2"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
